--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -10,4 +10,14 @@
       <h1>A pirate's life is for me</h1>
       <p>Hempen halter mizzenmast deadlights gaff pillage starboard jack lee Blimey draught. Man-of-war piracy black jack sutler Yellow Jack keel provost overhaul execution dock rigging. Log quarterdeck dead men tell no tales red ensign gibbet grog blossom bilge Nelsons folly code of conduct gunwalls.</p>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      {% for post in blog.blogs %}
+      <h3>{{ post.headline }}</h3>
+      <p>{{ post.date }}
+      <a href="blog/{{ post.slug }}.html">Read More</a></p>
+      {% endfor %}
+    </div>
+  </div>
 {% endblock %}
